# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: check_encoding_of_file.py  check_end_of_file.py  check_line_endings.py  check_q_emit.py  check_trailing_whitespaces.py
