[metadata]
name = pre-commit-hooks
version = 1.1.1
description = git pre-commit hooks
url = https://github.com/rogii-com/pre-commit-hooks
license = MIT

[options]
packages = find:
python_requires = >=3.6.9

[options.entry_points]
console_scripts =
    check_line_endings = pre_commit_hooks.check_line_endings:main
    check_trailing_whitespaces = pre_commit_hooks.check_trailing_whitespaces:main
    check_end_of_file = pre_commit_hooks.check_end_of_file:main
    check_q_emit = pre_commit_hooks.check_q_emit:main
